<resources>
    <string name="app_name">Private Camera</string>
    <string name="desc_expand_panel">Expand Panel</string>
    <string name="desc_collapse_panel">Collapse Panel</string>
    <string name="camera">Camera</string>
    <string name="player">Player</string>
    <string name="settings">Settings</string>
    <string name="desc_photo">Take a photo</string>
    <string name="desc_video_rec">Start Recording</string>
    <string name="desc_hide_panel">Hide Panel</string>
    <string name="desc_flip_camera">Flip front/back camera</string>
    <string name="desc_video_stop">Stop</string>
    <string name="desc_video_pause">Pause</string>
    <string name="desc_video_resume">Resume</string>
    <string name="list_videos">Video</string>
    <string name="list_photos">Photo</string>
    <string name="list_all">All</string>
    <string name="file_type">File Type</string>
    <string name="clear_all">Clear All</string>
    <string name="msg_confirm">If you execute this, all your data will be deleted and cannot be recovered. \n\nAre you sure you want to do it?</string>
    <string name="security_title">Security</string>
    <string name="enable_pwd_label">Protection by Password</string>
    <string name="password">Password</string>
    <string name="authentication">Authentication</string>
    <string name="password_hint">Input Your Password.</string>
    <string name="password_hint_new">Input New Password.</string>
    <string name="password_hint_confirm">Input again to confirm.</string>
    <string name="password_not_set">Password: n/a</string>
    <string name="password_set">Password: ********</string>
    <string name="password_incorrect">Password is incorrect.</string>
    <string name="passwords_not_match">Passwords do not match. Try again.</string>
    <string name="password_error">The password has been entered incorrectly %d times. All data have been cleared.</string>
    <string name="block_password_error">Clear All on Wrong Password</string>
    <string name="max_pwd_error_label">Allow Wrong Password %d Times</string>
    <string name="max_pwd_error_label_2">times</string>
    <string name="camera_title">Camera</string>
    <string name="tap_action_label">Action on Tapping</string>
    <string name="change_pwd_label">Change</string>
    <string name="camera_action_none">None</string>
    <string name="camera_action_photo">Photo</string>
    <string name="camera_action_video">Video</string>
    <string name="hide_panel_on_open_camera">HIde Control Panel</string>
    <string name="player_title">Player</string>
    <string name="skip_forward_by">Skip Forward by %.1f sec</string>
    <string name="skip_backward_by">Skip Backward by %.1f sec</string>
    <string name="reset">Reset All</string>
    <string name="start_editing">Edit Video</string>
    <string name="cancel">Cancel</string>
    <string name="server">Server</string>
    <string name="close">Close</string>
    <string name="secure_archive_address">Primary Host:</string>
    <string name="secure_archive_2nd_address">Secondary Host:</string>
    <string name="sa_title">Secure Archive</string>
    <string name="backup">Backup</string>
    <string name="rating_label">Rating</string>
    <string name="mark_label">Mark</string>
    <string name="edit_video_title">Edit</string>
    <string name="uploaded">Uploaded to SecureArchive.</string>
    <string name="rating_desc">Grouping</string>
    <string name="backup_title">Backup</string>
    <string name="remove_title">Remove Local</string>
    <string name="device_name_title">Device Name:</string>
    <string name="address_hint">SecureArchive Server Address</string>
    <string name="restore_title">Restore</string>
    <string name="purge_title">Purge</string>
    <string name="purge">Purge</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="order_by_date">Sort Order</string>
    <string name="order_by_date_asc">Oldest first</string>
    <string name="order_by_date_desc">Newest first</string>
    <string name="from">From</string>
    <string name="cloud_test_mode">Cloud Test Mode</string>
    <string name="playlist_setting_title">Settings of Player</string>
    <string name="playlist_option_title">Playlist Options</string>
    <string name="selfie_label">Selfie Button</string>
    <string name="desc_lamp_on">Lamp on</string>
    <string name="desc_lamp_off">Lamp off\n</string>
    <string name="video_quality">Video Quality</string>
    <string name="high_quality">High</string>
    <string name="low_quality">Low</string>
    <string name="middle_quality">Middle</string>
    <string name="repair_title">Repair</string>
    <string name="only_unbacked_up_items">Unbacked Up Items</string>
    <string name="duration_label">Duration</string>
    <string name="label_part_span">Span Of A Part</string>
    <string name="label_parts_count">Count Of Parts</string>
    <string name="enable_partial_mode">Enable Partial Mode</string>
    <string name="label_select_at">Select At</string>
    <string name="enable_overlap">Enable Overlap</string>
    <string name="span_1_min">1 min</string>
    <string name="span_3_min">3 min</string>
    <string name="span_5_min">5 min</string>
    <string name="span_10_min">10 min</string>
    <string name="span_custom">Custom</string>
    <string name="repair">Repair</string>
    <string name="allow_delete">Allow Deletion</string>
    <string name="device_id_title">Device ID</string>
    <string name="show_detail">Show Detail</string>
    <string name="migrate">Migrate</string>
    <string name="maintenance">Maintenance</string>
    <string name="desc_exposure">Exposure Compensation</string>
    <string name="look_and_feel"><![CDATA[Look&Feel]]></string>
    <string name="day_night_mode"><![CDATA[Day&Night Mode]]></string>
    <string name="contrast_mode">Color Contrast</string>
    <string name="theme_selector">Theme</string>
    <string name="day_night_hint"><![CDATA[Day&Night]]></string>
    <string name="color_contrast_hint">Colot Contrast</string>
    <string name="theme_hint">Theme</string>
    <string name="color_variation">Color Variation</string>
    <string name="colors">Colors</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="slot_dropdown_hint">Select Slot</string>
    <string name="default_slot_name">Default</string>
    <string name="slot_1_name">Slot-1</string>
    <string name="slot_in_use">In Use</string>
    <string name="slot_sync">Sync</string>
    <string name="slot_2_name">Slot-2</string>
    <string name="slot_3_name">Slot-3</string>
    <string name="slot_4_name">Slot-4</string>
    <string name="slot_secure">Secure</string>
    <string name="default_slot_name_hint">Name for Default slot</string>
    <string name="slot_1_name_hint">Name for Slot-1</string>
    <string name="slot_2_name_hint">Name for Slot-2</string>
    <string name="slot_3_name_hint">Name for Slot-3</string>
    <string name="slot_4_name_hint">Name for Slot-4</string>
    <string name="slot_dialog_title">Slot Settings</string>
    <string name="backup_db">Backup DB</string>
    <string name="hdr_label">Prefer HDR</string>
    <string name="convert_hdr_to_sdr">Convert to SDR</string>
    <string name="keep_hdr">Keep HDR</string>
    <string name="test">Test</string>
    <string name="agree_statement">I agree.</string>
    <string name="do_it">Do it.</string>
    <string name="do_not">Don\'t.</string>
    <string name="menu_settings">System</string>
    <string name="system_settings">System Settings</string>
    <string name="color_settings"><![CDATA[Look & Feel]]></string>
    <string name="dangerous_settings">Dangerous</string>
    <string name="bulse">バルス</string>
    <string name="crop">Crop</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_highest">Highest\n</string>
    <string name="resolution_fhd">FHD</string>
    <string name="resolution_hd">HD</string>
    <string name="resolution_uxga">UXGA</string>
    <string name="resolution_xga">XGA</string>
    <string name="aspect">Aspect</string>
    <string name="aspect_default">Default</string>
    <string name="aspect_4_3">4:3</string>
    <string name="aspect_16_9">16:9</string>
    <string name="capture_resolution">Snapshot</string>
    <string name="snapshot_resolution">Snapshot</string>
    <string name="prefer_quality">Prefer Quality</string>
    <string name="resolution_640">640</string>
    <string name="resolution_1280">1280</string>
    <string name="resolution_1920">1920</string>
    <string name="resolution_720">720</string>
    <string name="resolution_480">480</string>
    <string name="aspect_free">Free</string>
    <string name="highest_quality">Highest (No Re-Encoding)</string>
    <string name="scan_qr_code">Paring with QR Code</string>
    <string name="discover_servers">Search in the network with mDNS.</string>
    <string name="no_servers_discovered">Not Found</string>
    <string name="discovered_servers_label">Discovered on this network</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="enable_ssl">SSL</string>
    <string name="server_port">PORT</string>
    <string name="use_https">Use HTTPS</string>
    <string name="extract">Extract</string>
    <string name="sort">Sort</string>
    <string name="sort_by">By</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_order">Order</string>
    <string name="sort_ascend">Ascend</string>
    <string name="sort_descend">Descend</string>
    <string name="filter">Filter</string>
    <string name="offline_items">Offline Items</string>
    <string name="other_options">Other Options</string>
    <string name="jump">Jump</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="no_jump">Stay</string>
    <string name="stay">Stay</string>
    <string name="source_text">Sources</string>
    <string name="destination_text">Marge Targets</string>
</resources>