<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/camera_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        />
    <Space
        android:layout_height="@dimen/menu_button_spacing"
        android:layout_width="0dp"
        />
    <Button
        android:id="@+id/player_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/player"
        />
    <Space
        android:layout_height="@dimen/menu_button_spacing"
        android:layout_width="0dp"
        />
    <Button
        android:id="@+id/server_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/server"
        />
    <Space
        android:layout_height="@dimen/menu_button_spacing"
        android:layout_width="0dp"
        />
    <Button
        android:id="@+id/settings_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        />
    <Space
        android:layout_height="@dimen/menu_button_spacing"
        android:layout_width="0dp"
        />
    <Button
        android:id="@+id/clear_all_button"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        />

</LinearLayout>