<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_title"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/dlg_text_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dlg_item_margin">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_pwd_label"
            android:textColor="?attr/colorOnDialogSurface"
            android:textSize="@dimen/dlg_text_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/block_password_error_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block_password_error"
            android:textColor="?attr/colorOnDialogSurface"
            android:textSize="@dimen/dlg_text_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/max_pwd_error_label"
                android:textSize="@dimen/dlg_text_medium"
                tools:text="Allow Wrong Password 3 times"
                android:textColor="?attr/colorOnDialogSurface"
                />
            <ImageButton
                android:id="@+id/allow_error_minus"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_minus"
                app:tint="?attr/iconColor"
                android:background="?attr/selectableItemBackground"
                />
            <ImageButton
                android:id="@+id/allow_error_plus"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_plus"
                app:tint="?attr/iconColor"
                android:background="?attr/selectableItemBackground"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_title"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/dlg_text_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_action_label"
        android:textSize="@dimen/dlg_text_medium" />

</LinearLayout>