<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/black"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_skull"
        app:tint="@color/deep_purple_400"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_confirm"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/yellow_a100"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_agree"
        android:text="@string/agree_statement"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="?attr/colorSurface"
        >
        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/button_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"/>
        <Space
            android:layout_width="20dp"
            android:layout_height="0dp"
            />
        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            />
    </LinearLayout>
</LinearLayout>